--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@craco/craco": "^5.6.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@ledgerhq/hw-transport-webusb": "^5.41.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
     "@project-serum/associated-token": "0.1.0",
     "@project-serum/awesome-serum": "1.0.1",
     "@project-serum/pool": "0.2.3",
