--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@types/node": "^14.11.4",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
-    "antd": "^4.6.0",
+    "antd": "^4.17.4",
     "bn.js": "^5.1.3",
+    "coingecko-api": "^1.0.10",
     "craco-less": "^1.17.0",
     "i18next": "^21.6.0",
     "immutable-tuple": "^0.4.10",
