--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@ledgerhq/hw-transport-webusb": "^5.41.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@project-serum/associated-token": "0.1.0",
@@ -16,8 +19,10 @@
     "@project-serum/pool": "0.2.3",
     "@project-serum/serum": "^0.13.60",
     "@project-serum/sol-wallet-adapter": "^0.2.0",
+    "@project-serum/swap": "^0.1.0-alpha.35",
     "@solana/spl-name-service": "^0.1.2",
     "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-registry": "^0.2.1109",
     "@solana/web3.js": "^1.22.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -34,11 +39,14 @@
     "craco-less": "^1.17.0",
     "i18next": "^21.6.0",
     "immutable-tuple": "^0.4.10",
+    "material-ui-popup-state": "^2.0.0",
     "nanoid": "^3.1.22",
+    "notistack": "1.0.10",
     "qrcode.react": "^1.0.0",
     "query-string": "^7.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.5",
+    "react-async-hook": "^4.0.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.15.0",
@@ -49,7 +57,8 @@
     "react-use": "^17.3.1",
     "styled-components": "^5.1.1",
     "superstruct": "0.8.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "usehooks-ts": "^2.2.0"
   },
   "scripts": {
     "predeploy": "git pull --ff-only && yarn && yarn build",
