--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serum-dex-ui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dex.projectserum.com/",
+  "homepage": "https://www.cryptomushroomz.io/dex/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@craco/craco": "^5.6.4",
