--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.17.4",
+    "big.js": "^6.1.1",
     "bn.js": "^5.1.3",
     "coingecko-api": "^1.0.10",
     "craco-less": "^1.17.0",
