--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "craco-less": "^1.17.0",
     "i18next": "^21.6.0",
     "immutable-tuple": "^0.4.10",
+    "json-rpc-2.0": "^1.0.0",
     "material-ui-popup-state": "^2.0.0",
     "nanoid": "^3.1.22",
     "notistack": "1.0.10",
